--- a/src/frontEnd/ipl-dashboard/package.json
+++ b/src/frontEnd/ipl-dashboard/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -34,6 +36,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+      
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^6.0.0"
   }
 }
